# rade-rs

./: Cargo.toml  README.md  rustfmt.toml
.cargo/: config.toml
macros/: Cargo.toml
macros/src/: lib.rs
rade/: Cargo.toml  Readme.md
rade-cli/: Cargo.toml  Readme.md
rade-cli/src/: main.rs  utils.rs
rade/benches/: engine_benchmarks.rs
rade/src/: event.rs  lib.rs  match_.rs  prelude.rs  rade_engine.rs  rule_set.rs  utils.rs
rade/src/event/: serializer.rs
rade/src/rule_set/: error.rs  predicates.rs  rule.rs  rules.rs
rade/src/rule_set/rule/: condition.pest  operand.rs  parser.rs
rade/src/rule_set/rule/operand/: val.rs
rade/src/rule_set/rule/operand/val/: bool.rs  field.rs  float.rs  function.rs  int.rs  int_list.rs  method.rs  num.rs  regex.rs  serialization.rs  str.rs  str_list.rs  val_type.rs
rade/src/rule_set/rule/operand/val/function/: definitions.rs  mod.rs
rade/src/utils/: fat_regex.rs  fat_string.rs
rade/test_data/events/: amsi_bypass.yaml  amsi_init_failed.yaml  benign_explorer.yaml  benign_notepad.yaml  credential_dump.yaml  download_payload.yaml  encoded_command.yaml  full_injection_chain.yaml  large_pid.yaml  multi_download.yaml  network_discovery.yaml  process_injection.yaml  registry_persistence.yaml  registry_run_cmd.yaml  simple.yaml  string_test.yaml  suspicious_path.yaml  write_output.yaml
rade/test_data/old/: AmsiInitFailed.yaml  amsi_init_failed.yaml  write_output.yaml
rade/test_data/rules/amsi_disable/: AmsiBypass.yaml  AmsiInitFailed.yaml  CredentialDumping.yaml  EncodedCommand.yaml  LargeProcessId.yaml  NetworkDiscovery.yaml  ProcessInjection.yaml  Registry.yaml  RegistryPersistence.yaml  Simple.yaml  StringManipulation.yaml  SuspiciousDownload.yaml  SuspiciousPath.yaml
xtask/: Cargo.toml
xtask/src/: main.rs
