[package]
name = "rade-cli"
version = "0.0.1"
authors = ["radkum <radoslaw.kumorekit@gmail.com>"]
edition = "2024"
readme = "README.md"

[dependencies]
anyhow = "1.0"
env_logger = "0.10"
hashbrown = { version = "0.15", features = ["serde"] }
log = "~0"
rade = { path = "../rade" }
uuid = { version = "1.18.1", features = ["serde"] }
serde_yaml_bw = "=2.0.0"