[package]
name = "rade"
version = "0.0.1"
description = "Real-Time Advanced Detection Engine"
authors = ["radkum <radoslaw.kumorekit@gmail.com>"]
edition = "2024"
keywords = ["pattern", "matching", "engine"]
readme = "README.md"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
bincode = { version = "2.0.0-rc.3", features = ["serde", "alloc"]}
hex = "~0"
log = "~0"
regex = "1.11.0"
pest = "2"
pest_derive = "2"
serde = { workspace = true, features = ["derive", "rc"] }
serde_yaml_bw = "=2.0.0"
sha2 = "0.10"
uuid = { version = "1.18.1", features = ["serde"] }
thiserror-no-std = "2.0"
macros = { path = "../macros" }

[features]
default = ["std"]
std = []
